--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,10 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_native_splash: ^2.3.10
   get: ^4.6.6
+  firebase_core: ^2.24.2
+  cloud_firestore: ^4.14.0
+  firebase_auth: ^4.16.0
+  firebase_storage: ^11.6.0
 
 dev_dependencies:
   flutter_test:
