--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,6 @@ flutter_native_splash:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/
-    - assets/images/welcome_screen_images/
+    #- assets/images/
+    #- assets/images/welcome_screen_images/
     - assets/logo/
